--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="../css/all.min.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../css/06.parallex.css">
+    <link rel="stylesheet" href="../css/index.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
 </head>
 <body>
     
+    <script src="../js/index.js"></script>
 </body>
 </html>
