--- a/html/index.html
+++ b/html/index.html
@@ -43,6 +43,44 @@
 <section class="about-wrapper wrapper">
     <h2 class="title">ABOUT</h2>
     <h3 class="title">I love photography</h3>
+    <p>
+        We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+    <div class="about-wrap clearfix">
+        <div class="photo-wrap">
+            <h4 class="name"><i class="fa fa-user"></i> My Name</h4>
+            <div class="photo">
+                <img src="../img/avatar_hat.jpg" alt="me" class="img">
+            </div>
+        </div>
+        <div class="content-wrap">
+            Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </div>
+    </div>
+    <div class="skill-wrapper">
+        <h4 class="title">Im really good at:</h4>
+        <!-- ul.skill-wrap>li.skill*3>h5.title+.bar-wrap>.bar -->
+        <ul class="skill-wrap">
+            <li class="skill">
+                <h5 class="title"><i class="fa fa-camera"></i> Photography</h5>
+                <div class="bar-wrap">
+                    <div class="bar">90%</div>
+                </div>
+            </li>
+            <li class="skill">
+                <h5 class="title"><i class="fa fa-laptop"></i> Web Design</h5>
+                <div class="bar-wrap">
+                    <div class="bar">85%</div>
+                </div>
+            </li>
+            <li class="skill">
+                <h5 class="title"><i class="fa fa-image"></i> Photoshop</h5>
+                <div class="bar-wrap">
+                    <div class="bar">70%</div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </section>
 
 
